fix(03): revise plans based on checker feedback
Addresses checker issues:
- 03-02: Add Task 3 for ConnectWithRetry wrapper integrating CONN-02 backoff
- 03-02: Add must_have truth for exponential backoff with jitter
- 03-03: Split Task 2 into ListConnectedSubsystems (resolver) + OrphanCleaner (separate)
- 03-03: Update Task 1 to use ConnectWithRetry instead of ConnectWithConfig
- 03-03: Clarify connector access via nvme.NewConnector() in main.go
- 03-03: Add resolver.go to files_modified for ListConnectedSubsystems

--- a/.planning/phases/03-reconnection-resilience/03-02-PLAN.md
+++ b/.planning/phases/03-reconnection-resilience/03-02-PLAN.md
@@ -14,10 +14,11 @@ must_haves:
     - "ConnectWithConfig accepts ConnectionConfig and passes parameters to nvme connect"
     - "CreateVolume includes connection parameters in VolumeContext"
     - "nvme connect command includes -l and -c flags when config values are set"
+    - "Connection attempts use exponential backoff with jitter"
   artifacts:
     - path: "pkg/nvme/nvme.go"
-      provides: "ConnectWithConfig method using ConnectionConfig"
-      exports: ["Connector.ConnectWithConfig"]
+      provides: "ConnectWithConfig and ConnectWithRetry methods using ConnectionConfig"
+      exports: ["Connector.ConnectWithConfig", "Connector.ConnectWithRetry"]
     - path: "pkg/driver/controller.go"
       provides: "VolumeContext with connection parameters"
       contains: "ctrlLossTmo"
@@ -26,6 +27,10 @@ must_haves:
       to: "pkg/nvme/config.go"
       via: "ConnectWithConfig uses BuildConnectArgs"
       pattern: "BuildConnectArgs"
+    - from: "pkg/nvme/nvme.go"
+      to: "pkg/utils/retry.go"
+      via: "ConnectWithRetry wraps ConnectWithConfig with RetryWithBackoff"
+      pattern: "RetryWithBackoff"
     - from: "pkg/driver/controller.go"
       to: "pkg/driver/params.go"
       via: "CreateVolume calls ParseNVMEConnectionParams"
@@ -33,10 +38,10 @@ must_haves:
 ---
 
 <objective>
-Integrate connection parameters into NVMe connector and controller, enabling kernel parameters to flow from StorageClass through VolumeContext.
+Integrate connection parameters into NVMe connector and controller, enabling kernel parameters to flow from StorageClass through VolumeContext, and add retry wrapper for connection resilience.
 
-Purpose: Pass user-configured resilience parameters through the CSI flow to the nvme connect command.
-Output: Modified nvme.go with ConnectWithConfig, modified controller.go including params in VolumeContext.
+Purpose: Pass user-configured resilience parameters through the CSI flow to the nvme connect command, with exponential backoff retry on transient failures.
+Output: Modified nvme.go with ConnectWithConfig and ConnectWithRetry, modified controller.go including params in VolumeContext.
 </objective>
 
 <execution_context>
@@ -52,6 +57,7 @@ Output: Modified nvme.go with ConnectWithConfig, modified controller.go includin
 # Files from Plan 01 (will exist when this runs)
 @pkg/nvme/config.go
 @pkg/driver/params.go
+@pkg/utils/retry.go
 
 # Files to modify
 @pkg/nvme/nvme.go
@@ -130,18 +136,71 @@ Note: Both the "volume exists" path and "create new volume" path need VolumeCont
   <done>CreateVolume includes ctrlLossTmo, reconnectDelay, keepAliveTmo in VolumeContext for both new and existing volumes</done>
 </task>
 
+<task type="auto">
+  <name>Task 3: Add ConnectWithRetry wrapper method</name>
+  <files>pkg/nvme/nvme.go</files>
+  <action>
+Add ConnectWithRetry method to pkg/nvme/nvme.go that wraps ConnectWithConfig with RetryWithBackoff:
+
+1. Add to Connector interface:
+   ```go
+   // ConnectWithRetry connects with exponential backoff retry on transient failures
+   ConnectWithRetry(ctx context.Context, target Target, config ConnectionConfig) (string, error)
+   ```
+
+2. Add method implementation to connector struct:
+   ```go
+   func (c *connector) ConnectWithRetry(ctx context.Context, target Target, config ConnectionConfig) (string, error) {
+       var devicePath string
+       var lastErr error
+
+       backoff := utils.DefaultBackoffConfig()
+
+       err := utils.RetryWithBackoff(ctx, backoff, func() error {
+           path, connectErr := c.ConnectWithConfig(ctx, target, config)
+           if connectErr != nil {
+               lastErr = connectErr
+               klog.V(2).Infof("Connection attempt failed for NQN %s: %v (will retry if transient)", target.NQN, connectErr)
+               return connectErr
+           }
+           devicePath = path
+           return nil
+       })
+
+       if err != nil {
+           if lastErr != nil {
+               return "", fmt.Errorf("connection failed after retries: %w", lastErr)
+           }
+           return "", err
+       }
+
+       return devicePath, nil
+   }
+   ```
+
+3. Add import for "git.srvlab.io/whiskey/rds-csi-driver/pkg/utils" if not present
+
+This provides the exponential backoff with jitter (from RetryWithBackoff) that CONN-02 requires.
+The IsRetryableError function from pkg/utils/retry.go determines which errors trigger retry.
+  </action>
+  <verify>go build ./pkg/nvme/... compiles; go vet ./pkg/nvme/... passes</verify>
+  <done>ConnectWithRetry wraps ConnectWithConfig with exponential backoff using utils.RetryWithBackoff</done>
+</task>
+
 </tasks>
 
 <verification>
 After all tasks complete:
 1. `go build ./...` compiles entire project
 2. `go test ./pkg/nvme/... ./pkg/driver/...` passes
-3. Connector interface includes ConnectWithConfig
+3. Connector interface includes ConnectWithConfig and ConnectWithRetry
 4. CreateVolume VolumeContext includes connection parameter keys
+5. ConnectWithRetry uses RetryWithBackoff with DefaultBackoffConfig
 </verification>
 
 <success_criteria>
 - ConnectWithConfig accepts ConnectionConfig and builds nvme connect command with -l, -c flags
+- ConnectWithRetry wraps ConnectWithConfig with exponential backoff and jitter
 - ConnectWithContext maintains backward compatibility using default config
 - CreateVolume parses StorageClass for connection params and includes in VolumeContext
 - Invalid StorageClass parameters return InvalidArgument error
