--- a/.planning/phases/03-reconnection-resilience/03-03-PLAN.md
+++ b/.planning/phases/03-reconnection-resilience/03-03-PLAN.md
@@ -6,6 +6,7 @@ wave: 3
 depends_on: ["03-02"]
 files_modified:
   - pkg/driver/node.go
+  - pkg/nvme/resolver.go
   - pkg/nvme/orphan.go
   - cmd/rds-csi-plugin/main.go
 autonomous: true
@@ -13,12 +14,16 @@ autonomous: true
 must_haves:
   truths:
     - "NodeStageVolume extracts connection parameters from VolumeContext"
-    - "NodeStageVolume passes ConnectionConfig to connector"
+    - "NodeStageVolume uses ConnectWithRetry for exponential backoff on connection"
+    - "ListConnectedSubsystems scans sysfs to enumerate all connected NQNs"
     - "Node plugin cleans up orphaned NVMe connections on startup"
   artifacts:
     - path: "pkg/driver/node.go"
-      provides: "NodeStageVolume with connection parameter extraction"
-      contains: "ConnectWithConfig"
+      provides: "NodeStageVolume with connection parameter extraction and retry"
+      contains: "ConnectWithRetry"
+    - path: "pkg/nvme/resolver.go"
+      provides: "ListConnectedSubsystems method for enumerating connected NQNs"
+      exports: ["DeviceResolver.ListConnectedSubsystems"]
     - path: "pkg/nvme/orphan.go"
       provides: "OrphanCleaner for startup cleanup"
       exports: ["OrphanCleaner", "NewOrphanCleaner", "CleanupOrphanedConnections"]
@@ -28,23 +33,23 @@ must_haves:
   key_links:
     - from: "pkg/driver/node.go"
       to: "pkg/nvme/nvme.go"
-      via: "ConnectWithConfig with extracted params"
-      pattern: "ConnectWithConfig.*ConnectionConfig"
+      via: "ConnectWithRetry with extracted params"
+      pattern: "ConnectWithRetry.*ConnectionConfig"
     - from: "pkg/nvme/orphan.go"
       to: "pkg/nvme/resolver.go"
-      via: "IsOrphanedSubsystem for detection"
-      pattern: "IsOrphanedSubsystem"
+      via: "ListConnectedSubsystems and IsOrphanedSubsystem for detection"
+      pattern: "ListConnectedSubsystems|IsOrphanedSubsystem"
     - from: "cmd/rds-csi-plugin/main.go"
       to: "pkg/nvme/orphan.go"
-      via: "NewOrphanCleaner and cleanup call"
+      via: "NewOrphanCleaner with connector from nvme.NewConnector"
       pattern: "NewOrphanCleaner"
 ---
 
 <objective>
-Complete the connection resilience integration: extract parameters in NodeStageVolume and implement orphaned connection cleanup on node startup.
+Complete the connection resilience integration: extract parameters in NodeStageVolume with retry support, add subsystem enumeration to resolver, and implement orphaned connection cleanup on node startup.
 
-Purpose: Enable end-to-end flow of connection parameters and prevent orphaned NVMe connections from accumulating.
-Output: Updated node.go, new orphan.go, updated main.go with startup cleanup.
+Purpose: Enable end-to-end flow of connection parameters with retry and prevent orphaned NVMe connections from accumulating.
+Output: Updated node.go, updated resolver.go with ListConnectedSubsystems, new orphan.go, updated main.go with startup cleanup.
 </objective>
 
 <execution_context>
@@ -61,19 +66,18 @@ Output: Updated node.go, new orphan.go, updated main.go with startup cleanup.
 @pkg/nvme/config.go
 @pkg/driver/params.go
 @pkg/nvme/nvme.go
+@pkg/utils/retry.go
 
 # Files to modify
 @pkg/driver/node.go
-@cmd/rds-csi-plugin/main.go
-
-# Existing patterns for orphan detection
 @pkg/nvme/resolver.go
+@cmd/rds-csi-plugin/main.go
 </context>
 
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Extract connection parameters in NodeStageVolume</name>
+  <name>Task 1: Extract connection parameters in NodeStageVolume and use ConnectWithRetry</name>
   <files>pkg/driver/node.go</files>
   <action>
 Modify pkg/driver/node.go NodeStageVolume:
@@ -104,95 +108,210 @@ Modify pkg/driver/node.go NodeStageVolume:
 
 2. Add import for "strconv" if not present
 
-3. Find where ns.nvmeConn.Connect or ns.nvmeConn.ConnectWithContext is called and change to:
+3. Find where ns.nvmeConn.Connect is called (line 162) and change to use ConnectWithRetry:
    ```go
-   devicePath, err := ns.nvmeConn.ConnectWithConfig(ctx, target, connConfig)
+   devicePath, err := ns.nvmeConn.ConnectWithRetry(ctx, target, connConfig)
    ```
 
-4. Build target as before (it's already built in existing code)
-
-5. Log the connection config at V(2) level:
+4. Log the connection config at V(2) level before connecting:
    ```go
-   klog.V(2).Infof("Connecting with config: ctrl_loss_tmo=%d, reconnect_delay=%d",
+   klog.V(2).Infof("Connecting with config: ctrl_loss_tmo=%d, reconnect_delay=%d (with retry)",
        connConfig.CtrlLossTmo, connConfig.ReconnectDelay)
    ```
+
+This uses ConnectWithRetry (added in Plan 03-02 Task 3) which wraps ConnectWithConfig with exponential backoff from utils.RetryWithBackoff.
   </action>
   <verify>go build ./pkg/driver/... compiles; go test ./pkg/driver/... passes</verify>
-  <done>NodeStageVolume extracts ctrlLossTmo, reconnectDelay, keepAliveTmo from VolumeContext and calls ConnectWithConfig</done>
+  <done>NodeStageVolume extracts ctrlLossTmo, reconnectDelay, keepAliveTmo from VolumeContext and calls ConnectWithRetry for resilient connection</done>
 </task>
 
 <task type="auto">
-  <name>Task 2: Create OrphanCleaner for startup cleanup</name>
+  <name>Task 2: Add ListConnectedSubsystems method to DeviceResolver</name>
+  <files>pkg/nvme/resolver.go</files>
+  <action>
+Add ListConnectedSubsystems method to pkg/nvme/resolver.go to enumerate all connected NQNs via sysfs:
+
+1. Add method to DeviceResolver struct:
+   ```go
+   // ListConnectedSubsystems returns all NQNs that have subsystem entries in sysfs.
+   // This scans /sys/class/nvme-subsystem/*/subsysnqn for connected subsystems.
+   func (r *DeviceResolver) ListConnectedSubsystems() ([]string, error) {
+       return r.scanner.ListSubsystemNQNs()
+   }
+   ```
+
+2. Add ListSubsystemNQNs method to SysfsScanner (in pkg/nvme/sysfs.go or inline):
+   ```go
+   // ListSubsystemNQNs returns all NQNs from /sys/class/nvme-subsystem/*/subsysnqn
+   func (s *SysfsScanner) ListSubsystemNQNs() ([]string, error) {
+       subsysDir := filepath.Join(s.sysfsRoot, "class", "nvme-subsystem")
+
+       entries, err := os.ReadDir(subsysDir)
+       if err != nil {
+           if os.IsNotExist(err) {
+               return nil, nil // No subsystems connected
+           }
+           return nil, fmt.Errorf("failed to read nvme-subsystem directory: %w", err)
+       }
+
+       var nqns []string
+       for _, entry := range entries {
+           if !entry.IsDir() {
+               continue
+           }
+           nqnPath := filepath.Join(subsysDir, entry.Name(), "subsysnqn")
+           data, err := os.ReadFile(nqnPath)
+           if err != nil {
+               klog.V(4).Infof("Could not read NQN from %s: %v", nqnPath, err)
+               continue
+           }
+           nqn := strings.TrimSpace(string(data))
+           if nqn != "" {
+               nqns = append(nqns, nqn)
+           }
+       }
+
+       return nqns, nil
+   }
+   ```
+
+3. Add imports for "path/filepath", "os", "strings" if not present
+
+This provides the enumeration capability needed by OrphanCleaner in Task 3.
+  </action>
+  <verify>go build ./pkg/nvme/... compiles; go vet ./pkg/nvme/... passes</verify>
+  <done>DeviceResolver.ListConnectedSubsystems returns all NQNs from sysfs /sys/class/nvme-subsystem/*/subsysnqn</done>
+</task>
+
+<task type="auto">
+  <name>Task 3: Create OrphanCleaner for startup cleanup</name>
   <files>pkg/nvme/orphan.go</files>
   <action>
 Create pkg/nvme/orphan.go:
 
 1. OrphanCleaner struct:
    ```go
+   // OrphanCleaner detects and removes orphaned NVMe subsystem connections
    type OrphanCleaner struct {
        connector Connector
        resolver  *DeviceResolver
    }
    ```
 
-2. NewOrphanCleaner(connector Connector) *OrphanCleaner:
-   - Uses connector.GetResolver() to get resolver
-   - Returns configured cleaner
+2. NewOrphanCleaner constructor:
+   ```go
+   // NewOrphanCleaner creates an OrphanCleaner using the connector's resolver
+   func NewOrphanCleaner(connector Connector) *OrphanCleaner {
+       return &OrphanCleaner{
+           connector: connector,
+           resolver:  connector.GetResolver(),
+       }
+   }
+   ```
 
-3. CleanupOrphanedConnections(ctx context.Context) error:
-   - Log "Scanning for orphaned NVMe connections" at V(2)
-   - Get all connected NQNs using resolver.ListConnectedSubsystems()
-     (Note: may need to add this method if it doesn't exist - check resolver.go)
-   - Alternative: Use nvme list-subsys output parsing if method doesn't exist
-   - For each NQN:
-     - Call resolver.IsOrphanedSubsystem(nqn)
-     - If orphaned:
-       - Log warning: "Found orphaned subsystem: %s"
-       - Call connector.DisconnectWithContext(ctx, nqn)
-       - Log result (success or error)
-   - Count and log total orphans cleaned
-   - Return nil (cleanup is best-effort, don't fail on individual errors)
+3. CleanupOrphanedConnections method:
+   ```go
+   // CleanupOrphanedConnections scans for and disconnects orphaned NVMe subsystems.
+   // An orphaned subsystem appears connected but has no working block device.
+   // This is best-effort: individual disconnect failures are logged but don't stop cleanup.
+   func (oc *OrphanCleaner) CleanupOrphanedConnections(ctx context.Context) error {
+       klog.V(2).Info("Scanning for orphaned NVMe connections")
 
-4. Add helper if needed to list subsystems:
-   - May need to add ListConnectedSubsystems() to resolver
-   - Or use the existing IsOrphanedSubsystem with known NQNs from sysfs scan
+       // Get all connected NQNs using ListConnectedSubsystems (Task 2)
+       nqns, err := oc.resolver.ListConnectedSubsystems()
+       if err != nil {
+           return fmt.Errorf("failed to list connected subsystems: %w", err)
+       }
 
-Use klog for logging. Context should have reasonable timeout (2 min set by caller).
+       klog.V(3).Infof("Found %d connected NVMe subsystems", len(nqns))
+
+       orphanCount := 0
+       for _, nqn := range nqns {
+           // Check context cancellation
+           select {
+           case <-ctx.Done():
+               klog.Warning("Orphan cleanup interrupted by context cancellation")
+               return ctx.Err()
+           default:
+           }
+
+           // Check if this subsystem is orphaned
+           orphaned, err := oc.resolver.IsOrphanedSubsystem(nqn)
+           if err != nil {
+               klog.Warningf("Error checking if subsystem %s is orphaned: %v", nqn, err)
+               continue
+           }
+
+           if !orphaned {
+               continue
+           }
+
+           klog.Warningf("Found orphaned subsystem: %s", nqn)
+           orphanCount++
+
+           // Attempt to disconnect
+           if err := oc.connector.DisconnectWithContext(ctx, nqn); err != nil {
+               klog.Warningf("Failed to disconnect orphaned subsystem %s: %v", nqn, err)
+               // Continue to next orphan - best effort cleanup
+           } else {
+               klog.V(2).Infof("Successfully disconnected orphaned subsystem: %s", nqn)
+           }
+       }
+
+       if orphanCount > 0 {
+           klog.Infof("Orphan cleanup complete: found %d orphaned subsystems", orphanCount)
+       } else {
+           klog.V(2).Info("Orphan cleanup complete: no orphaned subsystems found")
+       }
+
+       return nil
+   }
+   ```
+
+4. Add imports: "context", "fmt", "k8s.io/klog/v2"
+
+The connector is obtained from the caller (main.go). NewOrphanCleaner takes the Connector interface and uses connector.GetResolver() to get the resolver (GetResolver is already on the Connector interface from Phase 1).
   </action>
   <verify>go build ./pkg/nvme/... compiles</verify>
-  <done>OrphanCleaner can scan and disconnect orphaned NVMe subsystems</done>
+  <done>OrphanCleaner can scan and disconnect orphaned NVMe subsystems using resolver.ListConnectedSubsystems and IsOrphanedSubsystem</done>
 </task>
 
 <task type="auto">
-  <name>Task 3: Integrate orphan cleanup into node plugin startup</name>
+  <name>Task 4: Integrate orphan cleanup into node plugin startup</name>
   <files>cmd/rds-csi-plugin/main.go</files>
   <action>
-Modify cmd/rds-csi-plugin/main.go:
+Modify cmd/rds-csi-plugin/main.go to run orphan cleanup on node startup:
 
-1. Find where node service/driver is initialized (look for NewNodeServer or similar)
+1. Add import for "git.srvlab.io/whiskey/rds-csi-driver/pkg/nvme" if not present
 
-2. After node service creation but before starting gRPC server, add:
+2. After the driver is created (around line 138) but before signal handling, add orphan cleanup for node mode:
    ```go
-   // Cleanup orphaned NVMe connections on startup
+   // Cleanup orphaned NVMe connections on node startup
    // This prevents accumulation of orphaned connections after node restarts
-   if runNode { // or whatever flag indicates node mode
-       cleaner := nvme.NewOrphanCleaner(/* connector from node server */)
+   if *nodeMode {
+       klog.Info("Running orphan NVMe connection cleanup on startup")
+
+       // Create a connector for cleanup (same as node server uses internally)
+       cleanupConnector := nvme.NewConnector()
+       cleaner := nvme.NewOrphanCleaner(cleanupConnector)
+
        ctx, cancel := context.WithTimeout(context.Background(), 2*time.Minute)
        if err := cleaner.CleanupOrphanedConnections(ctx); err != nil {
-           klog.Warningf("Orphan cleanup failed (non-fatal): %v", err)
+           // Log warning but don't fail startup - cleanup is best effort
+           klog.Warningf("Orphan NVMe cleanup failed (non-fatal): %v", err)
        }
        cancel()
    }
    ```
 
-3. Add import for "git.srvlab.io/whiskey/rds-csi-driver/pkg/nvme" if not present
+3. Add import for "context" if not present (should already be there via other imports)
 
-4. The connector should be accessible from the node server or driver struct
-   - May need to expose it via a getter if not accessible
-   - Or create a new connector instance for cleanup only
+Note: This creates a separate connector instance for cleanup. This is intentional because:
+- The driver creates the node server internally via driver.NewDriver()
+- We want cleanup to run before the gRPC server starts accepting requests
+- A fresh connector instance works fine for cleanup operations
 
-Note: This is a best-effort cleanup. Don't fail startup if cleanup fails.
-Log at Warning level for failures, V(2) for success.
+The cleanup runs with a 2-minute timeout and logs warnings on failure without blocking startup.
   </action>
   <verify>go build ./cmd/rds-csi-plugin/... compiles</verify>
   <done>Node plugin runs orphan cleanup on startup before serving requests</done>
@@ -204,14 +323,16 @@ Log at Warning level for failures, V(2) for success.
 After all tasks complete:
 1. `go build ./...` compiles entire project
 2. `go test ./...` passes
-3. NodeStageVolume extracts connection parameters from VolumeContext
-4. OrphanCleaner exists and can detect/cleanup orphans
-5. main.go calls CleanupOrphanedConnections on node startup
+3. NodeStageVolume extracts connection parameters and calls ConnectWithRetry
+4. DeviceResolver.ListConnectedSubsystems exists and scans sysfs
+5. OrphanCleaner exists and can detect/cleanup orphans
+6. main.go calls CleanupOrphanedConnections on node startup
 </verification>
 
 <success_criteria>
-- NodeStageVolume passes user-configured connection parameters to nvme connect
-- OrphanCleaner uses DeviceResolver.IsOrphanedSubsystem for detection
+- NodeStageVolume passes user-configured connection parameters to ConnectWithRetry
+- ListConnectedSubsystems enumerates all NQNs from /sys/class/nvme-subsystem
+- OrphanCleaner uses ListConnectedSubsystems + IsOrphanedSubsystem for detection
 - Orphan cleanup runs at node startup before serving CSI requests
 - Cleanup failures are logged as warnings, not fatal errors
 - All components integrate without breaking existing functionality
