fix(04): revise plans based on checker feedback
- 04-04: Fix depends_on to [] (no actual dependency on 04-02)
- 04-04: Update wave to 1 (can run in parallel with 04-01, 04-02)
- 04-04: Update truths to reflect logging vs K8s events for orphans
- 04-03: Add Task 3 to instrument CSI operations with metrics.Record*()
- 04-03: Update truths to be user-observable (scrape endpoint, not impl)
- 04-03: Add key_links for metrics recording in node.go and nvme.go

--- a/.planning/phases/04-observability/04-03-PLAN.md
+++ b/.planning/phases/04-observability/04-03-PLAN.md
@@ -7,13 +7,16 @@ depends_on: ["04-02"]
 files_modified:
   - cmd/rds-csi-plugin/main.go
   - pkg/driver/driver.go
+  - pkg/driver/node.go
+  - pkg/nvme/nvme.go
+  - pkg/mount/recovery.go
 autonomous: true
 
 must_haves:
   truths:
-    - "Driver exposes Prometheus metrics on configurable HTTP port"
-    - "Metrics endpoint is accessible at /metrics path"
-    - "Metrics server runs in background without blocking gRPC server"
+    - "Operators can scrape /metrics endpoint while driver serves CSI requests"
+    - "Metrics endpoint is accessible at /metrics path on configurable port"
+    - "CSI operations record metrics for volume ops, NVMe connections, and mounts"
   artifacts:
     - path: "cmd/rds-csi-plugin/main.go"
       provides: "HTTP metrics server startup and --metrics-address flag"
@@ -21,6 +24,12 @@ must_haves:
     - path: "pkg/driver/driver.go"
       provides: "Metrics integration point for driver operations"
       contains: "observability.Metrics"
+    - path: "pkg/driver/node.go"
+      provides: "Metrics recording in node operations"
+      contains: "metrics.Record"
+    - path: "pkg/nvme/nvme.go"
+      provides: "Metrics recording in NVMe operations"
+      contains: "metrics.Record"
   key_links:
     - from: "cmd/rds-csi-plugin/main.go"
       to: "http.ListenAndServe"
@@ -30,13 +39,21 @@ must_haves:
       to: "observability.NewMetrics"
       via: "metrics initialization"
       pattern: "observability\\.NewMetrics"
+    - from: "pkg/driver/node.go"
+      to: "metrics.RecordVolumeOp"
+      via: "operation instrumentation"
+      pattern: "RecordVolumeOp"
+    - from: "pkg/nvme/nvme.go"
+      to: "metrics.RecordNVMeConnect"
+      via: "NVMe connect instrumentation"
+      pattern: "RecordNVMeConnect"
 ---
 
 <objective>
-Add HTTP metrics server to main.go that exposes Prometheus metrics on a configurable port, integrate metrics into driver.
+Add HTTP metrics server to main.go that exposes Prometheus metrics on a configurable port, integrate metrics into driver, and instrument CSI operations with metrics recording.
 
-Purpose: Enable Prometheus to scrape driver metrics via HTTP /metrics endpoint.
-Output: Updated main.go with metrics server, updated driver.go to accept and use metrics instance.
+Purpose: Enable Prometheus to scrape driver metrics via HTTP /metrics endpoint with real operation data.
+Output: Updated main.go with metrics server, updated driver.go to accept and use metrics instance, instrumented node.go and nvme.go with metrics recording calls.
 </objective>
 
 <execution_context>
@@ -51,6 +68,9 @@ Output: Updated main.go with metrics server, updated driver.go to accept and use
 @.planning/phases/04-observability/04-RESEARCH.md
 @cmd/rds-csi-plugin/main.go
 @pkg/driver/driver.go
+@pkg/driver/node.go
+@pkg/nvme/nvme.go
+@pkg/mount/recovery.go
 </context>
 
 <tasks>
@@ -164,13 +184,95 @@ Update driver.go to accept and store metrics instance:
    }
    ```
 
-Note: Actual metrics recording will be added in a later plan. This just establishes the plumbing.
+Note: Actual metrics recording will be added in Task 3.
   </action>
   <verify>
 1. Run `go build ./...` to verify compilation
 2. Run `go test ./pkg/driver/... -v` to verify tests pass
   </verify>
   <done>DriverConfig has Metrics field, Driver stores metrics, GetMetrics() method exists.</done>
+</task>
+
+<task type="auto">
+  <name>Task 3: Instrument CSI operations with metrics recording</name>
+  <files>pkg/driver/node.go, pkg/nvme/nvme.go, pkg/mount/recovery.go</files>
+  <action>
+Add metrics recording calls to CSI operations. All calls must nil-check metrics first.
+
+1. **pkg/driver/node.go** - Instrument NodeStageVolume and NodeUnstageVolume:
+
+   At the START of NodeStageVolume, record timing:
+   ```go
+   start := time.Now()
+   defer func() {
+       if d.metrics != nil {
+           d.metrics.RecordVolumeOp("stage", err, time.Since(start))
+       }
+   }()
+   ```
+
+   At the START of NodeUnstageVolume, same pattern:
+   ```go
+   start := time.Now()
+   defer func() {
+       if d.metrics != nil {
+           d.metrics.RecordVolumeOp("unstage", err, time.Since(start))
+       }
+   }()
+   ```
+
+   In the stale mount detection block within NodeGetVolumeStats (around line 446):
+   ```go
+   if d.metrics != nil {
+       d.metrics.RecordStaleMountDetected()
+   }
+   ```
+
+2. **pkg/nvme/nvme.go** - Instrument Connect and Disconnect:
+
+   First, add metrics field to NVMeManager struct if not present, and pass from driver.
+
+   In Connect(), wrap the connection attempt:
+   ```go
+   start := time.Now()
+   // ... existing connect logic ...
+   if m.metrics != nil {
+       m.metrics.RecordNVMeConnect(err, time.Since(start))
+       if err == nil {
+           // Increment active connections on success
+           // (handled internally by RecordNVMeConnect)
+       }
+   }
+   ```
+
+   In Disconnect():
+   ```go
+   if m.metrics != nil {
+       m.metrics.RecordNVMeDisconnect()
+   }
+   ```
+
+3. **pkg/mount/recovery.go** - Instrument recovery operations:
+
+   In RecoverStaleMount or equivalent recovery function:
+   ```go
+   if r.metrics != nil {
+       r.metrics.RecordStaleRecovery(err)
+   }
+   ```
+
+Pattern for all instrumentation:
+- Always nil-check metrics before recording
+- Use defer for timing to capture both success and error paths
+- Pass operation name as string constant ("stage", "unstage", "connect")
+- Pass err to let metrics package determine success/failure label
+  </action>
+  <verify>
+1. Run `go build ./...` to verify compilation
+2. Run `go test ./... -v` to verify all tests pass
+3. Verify instrumentation: `grep -r "RecordVolumeOp\|RecordNVMeConnect\|RecordStaleMount" pkg/`
+  </verify>
+  <done>NodeStageVolume, NodeUnstageVolume record volume op metrics. NVMe Connect/Disconnect record connection metrics. Stale mount detection and recovery record respective metrics.</done>
 </task>
 
 </tasks>
@@ -181,6 +283,7 @@ Note: Actual metrics recording will be added in a later plan. This just establis
 3. Verify flag exists: `grep -n "metrics-address" cmd/rds-csi-plugin/main.go`
 4. Verify HTTP server: `grep -n "ListenAndServe" cmd/rds-csi-plugin/main.go`
 5. Verify Metrics field: `grep -n "metrics.*Metrics" pkg/driver/driver.go`
+6. Verify instrumentation: `grep -rn "RecordVolumeOp\|RecordNVMeConnect" pkg/driver/ pkg/nvme/`
 </verification>
 
 <success_criteria>
@@ -188,6 +291,9 @@ Note: Actual metrics recording will be added in a later plan. This just establis
 - HTTP server starts in goroutine serving /metrics endpoint
 - DriverConfig and Driver have Metrics field
 - GetMetrics() method available on Driver
+- NodeStageVolume and NodeUnstageVolume record volume operation metrics
+- NVMe Connect/Disconnect record connection metrics
+- Stale mount detection and recovery record metrics
 - All tests pass
 </success_criteria>
 
