--- a/.planning/phases/04-observability/04-04-PLAN.md
+++ b/.planning/phases/04-observability/04-04-PLAN.md
@@ -2,17 +2,17 @@
 phase: 04-observability
 plan: 04
 type: execute
-wave: 2
-depends_on: ["04-02"]
+wave: 1
+depends_on: []
 files_modified:
   - pkg/driver/events.go
 autonomous: true
 
 must_haves:
   truths:
-    - "Driver can post connection failure events to Kubernetes"
-    - "Driver can post connection recovery events to Kubernetes"
-    - "Driver can post orphan detection and cleanup events to Kubernetes"
+    - "Driver can post connection failure events to PVCs"
+    - "Driver can post connection recovery events to PVCs"
+    - "Driver logs orphan detection and cleanup events for debugging"
   artifacts:
     - path: "pkg/driver/events.go"
       provides: "Additional event posting methods for comprehensive coverage"
@@ -117,32 +117,32 @@ func (ep *EventPoster) PostConnectionRecovery(ctx context.Context, pvcNamespace,
 }
 ```
 
-3. PostOrphanDetected - Posts Warning event when orphan connection detected
+3. PostOrphanDetected - Logs warning when orphan connection detected (no PVC to post to)
 ```go
-// PostOrphanDetected posts a Warning event when an orphan NVMe connection is detected
-// This is posted to the node (not a specific PVC) since orphans have no PVC association
+// PostOrphanDetected logs when an orphan NVMe connection is detected.
+// Orphans have no associated PVC, so this logs rather than posting a K8s event.
+// The log format is structured for easy parsing by log aggregation systems.
 func (ep *EventPoster) PostOrphanDetected(ctx context.Context, nodeName, nqn string) error {
-    // Log the detection - orphans have no PVC to post to
-    klog.Infof("Orphan connection detected on node %s: NQN=%s", nodeName, nqn)
+    klog.Infof("OrphanDetected: node=%s nqn=%s", nodeName, nqn)
     return nil
 }
 ```
 
-4. PostOrphanCleaned - Posts Normal event when orphan cleaned up
+4. PostOrphanCleaned - Logs when orphan cleaned up (no PVC to post to)
 ```go
-// PostOrphanCleaned posts a Normal event when an orphan NVMe connection is cleaned up
+// PostOrphanCleaned logs when an orphan NVMe connection is cleaned up.
+// Orphans have no associated PVC, so this logs rather than posting a K8s event.
 func (ep *EventPoster) PostOrphanCleaned(ctx context.Context, nodeName, nqn string) error {
-    // Log the cleanup - orphans have no PVC to post to
-    klog.Infof("Orphan connection cleaned on node %s: NQN=%s", nodeName, nqn)
+    klog.Infof("OrphanCleaned: node=%s nqn=%s", nodeName, nqn)
     return nil
 }
 ```
 
-Note: Orphan events are logged rather than posted to PVCs because orphaned connections by definition have no associated PVC. Future enhancement could post to Node objects.
+Note: Orphan events are logged rather than posted to K8s because orphaned connections by definition have no associated PVC. The log format is structured for easy filtering in log aggregation (e.g., `OrphanDetected: node=worker-1 nqn=nqn.2000-02.com.mikrotik:pvc-xxx`).
 
 All methods follow existing patterns:
 - Return nil on PVC lookup failure (best-effort, don't block operations)
-- Format message with [volumeID] on [nodeName] prefix
+- Format message with [volumeID] on [nodeName] prefix for PVC events
 - Use appropriate EventType (Warning for failures, Normal for informational)
   </action>
   <verify>
@@ -164,6 +164,8 @@ All methods follow existing patterns:
 <success_criteria>
 - Four new EventReason constants added
 - Four new event posting methods added
+- Connection events post to PVCs via K8s event recorder
+- Orphan events log in structured format (no PVC available)
 - All methods follow existing patterns (best-effort, don't block on failures)
 - Code compiles and tests pass
 </success_criteria>
