docs(v0.3): create roadmap with 3 phases for volume fencing
Create milestone v0.3.0 roadmap starting from Phase 5 (continues from v1).

Phases:
- Phase 5: Attachment Manager Foundation (FENCE-01 to FENCE-04)
  - In-memory tracking with sync.RWMutex
  - PV annotation persistence
  - Startup state rebuild
  - Per-volume locking

- Phase 6: CSI Publish/Unpublish (CSI-01 to CSI-06)
  - ControllerPublishVolume implementation
  - ControllerUnpublishVolume implementation
  - FAILED_PRECONDITION on conflicts
  - Node existence validation

- Phase 7: Robustness and Observability (FENCE-05, FENCE-06, OBS-01, OBS-02)
  - Background reconciliation
  - Grace period for migrations
  - Prometheus metrics
  - Kubernetes events

Coverage: 14/14 requirements mapped (100%)
Depth: Standard (3 phases for 14 requirements)

Files:
- .planning/milestones/v0.3-ROADMAP.md (created)
- .planning/milestones/v0.3-REQUIREMENTS.md (updated traceability)
- .planning/STATE.md (updated to Phase 5)

--- a/.planning/milestones/v0.3-REQUIREMENTS.md
+++ b/.planning/milestones/v0.3-REQUIREMENTS.md
@@ -52,26 +52,31 @@ Deferred to later milestones.
 
 | Requirement | Phase | Status |
 |-------------|-------|--------|
-| FENCE-01 | TBD | Pending |
-| FENCE-02 | TBD | Pending |
-| FENCE-03 | TBD | Pending |
-| FENCE-04 | TBD | Pending |
-| FENCE-05 | TBD | Pending |
-| FENCE-06 | TBD | Pending |
-| CSI-01 | TBD | Pending |
-| CSI-02 | TBD | Pending |
-| CSI-03 | TBD | Pending |
-| CSI-04 | TBD | Pending |
-| CSI-05 | TBD | Pending |
-| CSI-06 | TBD | Pending |
-| OBS-01 | TBD | Pending |
-| OBS-02 | TBD | Pending |
+| FENCE-01 | Phase 5 | Pending |
+| FENCE-02 | Phase 5 | Pending |
+| FENCE-03 | Phase 5 | Pending |
+| FENCE-04 | Phase 5 | Pending |
+| FENCE-05 | Phase 7 | Pending |
+| FENCE-06 | Phase 7 | Pending |
+| CSI-01 | Phase 6 | Pending |
+| CSI-02 | Phase 6 | Pending |
+| CSI-03 | Phase 6 | Pending |
+| CSI-04 | Phase 6 | Pending |
+| CSI-05 | Phase 6 | Pending |
+| CSI-06 | Phase 6 | Pending |
+| OBS-01 | Phase 7 | Pending |
+| OBS-02 | Phase 7 | Pending |
 
 **Coverage:**
 - v0.3.0 requirements: 14 total
-- Mapped to phases: 0 (pending roadmap)
-- Unmapped: 14
+- Mapped to phases: 14 (100% coverage)
+- Unmapped: 0
+
+**Phase Distribution:**
+- Phase 5 (Attachment Manager Foundation): 4 requirements
+- Phase 6 (CSI Publish/Unpublish): 6 requirements
+- Phase 7 (Robustness and Observability): 4 requirements
 
 ---
 *Requirements defined: 2026-01-31*
-*Last updated: 2026-01-31 after initial definition*
+*Last updated: 2026-01-31 after roadmap creation*
