docs(05): create phase plan for Attachment Manager Foundation
Phase 5: Attachment Manager Foundation
- 3 plans in 3 waves (sequential dependency)
- Covers FENCE-01, FENCE-02, FENCE-03, FENCE-04 requirements

Plan structure:
- 05-01: Core types, locks, in-memory tracking (Wave 1)
- 05-02: PV annotation persistence, state rebuild, driver integration (Wave 2)
- 05-03: Comprehensive unit tests (Wave 3)

Ready for execution

--- a/.planning/milestones/v0.3-ROADMAP.md
+++ b/.planning/milestones/v0.3-ROADMAP.md
@@ -2,7 +2,7 @@
 
 **Status:** In Progress
 **Phases:** 5-7
-**Total Plans:** TBD
+**Total Plans:** 3 (Phase 5), TBD (Phases 6-7)
 
 ## Overview
 
@@ -14,7 +14,7 @@ This roadmap prevents volume ping-pong between nodes by implementing ControllerP
 **Goal**: Driver tracks volume-to-node attachments with persistent state that survives controller restarts
 **Depends on**: Phase 4 (Observability from v1)
 **Requirements**: FENCE-01, FENCE-02, FENCE-03, FENCE-04
-**Plans**: TBD
+**Plans**: 3 plans in 3 waves
 
 **Success Criteria** (what must be TRUE):
 1. AttachmentManager tracks which volumes are attached to which nodes in memory
@@ -23,7 +23,9 @@ This roadmap prevents volume ping-pong between nodes by implementing ControllerP
 4. Controller can rebuild full attachment state from PV annotations on startup
 
 Plans:
-- TBD (pending phase planning)
+- [x] 05-01-PLAN.md — Core AttachmentManager with types, locks, in-memory tracking
+- [ ] 05-02-PLAN.md — PV annotation persistence, state rebuild, driver integration
+- [ ] 05-03-PLAN.md — Comprehensive unit tests
 
 **Details:**
 - AttachmentManager with sync.RWMutex for thread-safe in-memory tracking
